--- a/index.html
+++ b/index.html
@@ -630,8 +630,8 @@
                     <div class="url-body default">
 
 
-                        <a href="http://mail.qq.com/" target="_blank" data-id="" data-url="http://mail.qq.com/"
-                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="腾讯 QQ 邮箱。">
+                        <a href="http://ys.mihoyo.com" target="_blank" data-id="" data-url="http://ys.mihoyo.com"
+                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="快给我去玩原神。">
 
                             <div class="card-body">
                                 <div class="url-content d-flex align-items-center">
@@ -639,21 +639,21 @@
 
 
                                             <img class="lazy" src="assets/images/logos/qq%e9%82%ae%e7%ae%b1.png" data-src="assets/images/logos/qq%e9%82%ae%e7%ae%b1.png"
-                                                onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="QQ 邮箱">
+                                                onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="原神">
 
 
                                     </div>
                                     <div class="url-info flex-fill">
                                         <div class="text-sm overflowClip_1">
-                                            <strong>QQ 邮箱</strong>
+                                            <strong>原神</strong>
                                         </div>
-                                        <p class="overflowClip_1 m-0 text-muted text-xs">腾讯 QQ 邮箱。</p>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">快给我去玩原神。</p>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <a href="http://mail.qq.com/" class="togo text-center text-muted is-views" data-id="689"
-                            data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
+                        <a href="http://ys.mihoyo.com" class="togo text-center text-muted is-views" data-id="689"
+                            data-toggle="tooltip" data-placement="right" title="启动原神" rel="nofollow">
                             <i class="iconfont icon-goto"></i>
                         </a>
                     </div>
@@ -6179,5 +6179,3 @@ function switchNightMode(){
 </script>
 </body>
 </html>
-
-
