--- a/about/index.html
+++ b/about/index.html
@@ -638,7 +638,7 @@
                                     <div class="url-img mr-2 d-flex align-items-center justify-content-center">
 
 
-                                            <img class="lazy" src="assets/images/logos/ys1145.png" data-src="assets/images/logos/ys1145.png" alt="原神">
+                                            <img class="lazy" src="..assets/images/logos/ys1145.png" data-src="..assets/images/logos/ys1145.png" alt="原神">
 
 
                                     </div>
