--- a/index.html
+++ b/index.html
@@ -638,8 +638,7 @@
                                     <div class="url-img mr-2 d-flex align-items-center justify-content-center">
 
 
-                                            <img class="lazy" src="assets/images/logos/ys1145.png" data-src="assets/images/logos/qq%e9%82%ae%e7%ae%b1.png"
-                                                onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="原神">
+                                            <img class="lazy" src="assets/images/logos/ys1145.png" data-src="assets/images/logos/qq%e9%82%ae%e7%ae%b1.png"alt="原神">
 
 
                                     </div>
